deploy/kustomize/redis/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  labels:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: storage
    app.kubernetes.io/part-of: docker-mailserver
spec:
  type: ClusterIP
  ports:
    - name: redis
      port: 6379
      protocol: TCP
      targetPort: redis
  selector:
    app.kubernetes.io/name: redis
    app.kubernetes.io/component: storage
    app.kubernetes.io/part-of: docker-mailserver
