deploy/kustomize/redis/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: redis-network-policy
  labels:
    app.kubernetes.io/component: redis
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/component: redis
      app.kubernetes.io/instance: mail
  policyTypes:
    - Ingress
    - Egress
  ingress:
    # Allow all pod-to-pod communication within the namespace
    - from:
        - podSelector: {}
      ports:
        - protocol: TCP
          port: 6379 # Redis
  egress: [] # Deny all egress traffic
